# axum-api

./: .env  .prettierrc  Cargo.toml  ReadME.md
migration/src/: lib.rs  m20240727_172256_create_table_todo.rs  m20240729_074235_create_table_user.rs
src/: main.rs
src/config/: database.rs
src/dto/: token_dto.rs  user_dto.rs
src/entities/: prelude.rs  todos.rs
src/entity/: mod.rs  user.rs
src/error/: api_error.rs  db_error.rs  mod.rs  request_error.rs  token_error.rs  user_error.rs
src/handler/: auth_handler.rs  mod.rs  profile_handler.rs  register_handler.rs
src/middleware/: auth.rs
src/repository/: user_repository.rs
src/response/: api_response.rs
src/routes/: auth.rs  mod.rs  profile.rs  register.rs  root.rs
src/service/: token_service.rs  user_service.rs
src/state/: auth_state.rs  mod.rs  token_state.rs
