[package]
name = "simple-api-rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
# chrono = { version = "0.4.24", features = ["serde"] }
# serde = { version = "1.0.159", features = ["derive"] }
# serde_json = "1.0.95"
# tokio = { version = "1.26.0", features = ["full"] }
# tower-http = { version = "0.5.0", features = ["cors"] }
# uuid = { version = "1.3.0", features = ["v4","serde"] }


# tracing-subscriber = "0.3.17"
# dotenv = "0.15.0"
# jsonwebtoken = "8.3.0"
# sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "migrate", "chrono", "time"] }