[package]
name = "simple-api-rust-axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.26.0", features = ["full"] }

bcrypt = "0.14.0"
sqlx = "0.7.4"
# uuid = { version = "1.3.0", features = ["v4","serde"] }
http = "1.1"
tower = { version = "0.4.13", features = ["full"] }
tower-http = { version = "0.4.0", features = ["full"] }

validator = { version = "0.18.0", features = ["derive"] }
thiserror = "1.0.40"
tracing-subscriber = "0.3.17"
dotenv = "0.15.0"
jsonwebtoken = "8.3.0"
async-trait = "0.1.68"

sea-orm = { version = "^0.12.0", features = [
    "sqlx-mysql",
    "runtime-async-std-native-tls",
    "macros",
] }
futures = "0.3.28"

migration = { path = "migration" }
[workspace]
members = [".", "migration"]
